JUB-1933 - addOpens checkbox added and current stages polling fixed for java 9+
Change-Id: I4c847536aa5f4945eaec7daab830eff16d5273de